--- a/src/app/core/admin/feedback/admin-list-feedback.component.html
+++ b/src/app/core/admin/feedback/admin-list-feedback.component.html
@@ -7,19 +7,21 @@
 	<system-alert></system-alert>
 
 	<div class="pt-2">
-
-		<div class="d-flex mb-3">
-			<asy-search-input placeholder="Search..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
-			<button type="button" class="btn btn-outline-secondary ml-auto" (click)="export()">
-				<span class="fa fa-download"></span> Export
-			</button>
-		</div>
-
 		<pageable-table [items]="items"
 						[hasItems]="hasItems"
 						[pagingOptions]="pagingOptions"
+						[showActions]="true"
 						[tableStriped]="true"
 						(pageChange)="pageEvent$.next($event)">
+
+			<ng-template #tableActions>
+				<div class="d-flex w-100">
+					<asy-search-input placeholder="Search..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
+					<button type="button" class="btn btn-outline-secondary ml-auto" (click)="export()">
+						<span class="fa fa-download"></span> Export
+					</button>
+				</div>
+			</ng-template>
 
 			<ng-template #tableHeader>
 				<th *ngFor="let header of headers">
