--- a/src/app/core/messages/recent-messages/recent-messages.component.html
+++ b/src/app/core/messages/recent-messages/recent-messages.component.html
@@ -2,13 +2,13 @@
 	<h4 class="mb-3">Notifications</h4>
 	<div class="card card-message mb-3" *ngFor="let message of messages">
 		<div class="row no-gutters">
-			<div class="col col-alert-icon {{ message.type | lowercase }}">
-				<span class="fa alert-icon {{ message.type | lowercase }}"
+			<div class="col col-alert-icon {{ messageType[message.type] | lowercase }}">
+				<span class="fa alert-icon {{ messageType[message.type] | lowercase }}"
 					  [ngClass]="{
-						'fa-check': message.type === 'MOTD',
-						'fa-info': message.type === 'INFO',
-						'fa-exclamation': message.type === 'WARN',
-						'fa-exclamation-triangle': message.type === 'ERROR'
+						'fa-check': message.type === messageType.MOTD,
+						'fa-info': message.type === messageType.INFO,
+						'fa-exclamation': message.type === messageType.WARN,
+						'fa-exclamation-triangle': message.type === messageType.ERROR
 						}"></span>
 			</div>
 			<div class="col-alert-body">
