--- a/src/app/core/messages/view-all-messages/view-all-messages.component.html
+++ b/src/app/core/messages/view-all-messages/view-all-messages.component.html
@@ -19,13 +19,13 @@
 			<ng-container *ngFor="let message of messages">
 				<div class="card card-message mb-4 text-left">
 					<div class="row no-gutters">
-						<div class="col-alert-icon {{ message.type | lowercase }}">
+						<div class="col-alert-icon {{ messageType[message.type] | lowercase }}">
 							<span class="fa alert-icon d-flex align-items-center"
 								  [ngClass]="{
-									'fa-check': message.type === 'MOTD',
-									'fa-info': message.type === 'INFO',
-									'fa-exclamation': message.type === 'WARN',
-									'fa-exclamation-triangle': message.type === 'ERROR'
+									'fa-check': message.type === messageType.MOTD,
+									'fa-info': message.type === messageType.INFO,
+									'fa-exclamation': message.type === messageType.WARN,
+									'fa-exclamation-triangle': message.type === messageType.ERROR
 									}"></span>
 						</div>
 						<div class="col-alert-body">
