fix: change to use user-pref link iff enabled in config

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -89,8 +89,8 @@
 						<li [hidden]="pki"><a href="/api/auth/signout">Sign out</a></li>
 
 						<!-- User Preferences -->
-						<li *ngIf="isUserPreferencesTemplate">
-							<a [routerLink]="['user/userPreference']"
+						<li *ngIf="showUserPreferencesLink">
+							<a [routerLink]="userPreferencesLink"
 							   (click)="userNavPopover.hide()">
 								User Preferences
 							</a>
