feat: configurable user preferences link in navbar (#120)
Add configurable user preferences link under user popover menu in navbar.
Config options include enable/disable and router path to preference edit component.

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -88,6 +88,14 @@
 						<!-- User Signout -->
 						<li [hidden]="pki"><a href="/api/auth/signout">Sign out</a></li>
 
+						<!-- User Preferences -->
+						<li *ngIf="showUserPreferencesLink">
+							<a [routerLink]="userPreferencesLink"
+							   (click)="userNavPopover.hide()">
+								User Preferences
+							</a>
+						</li>
+
 					</ul>
 				</ng-template>
 			</li>
