refactor: updates to take advantage of new typescript features
Updated to use optional chaining and null coalescing where appropriate.
Allowed for removing lodash/get import

--- a/src/app/core/admin/user-management/manage-user.component.html
+++ b/src/app/core/admin/user-management/manage-user.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="user && user.userModel">
+<section *ngIf="user?.userModel">
 
 	<!-- Show a breadcrumb to the list users page -->
 	<a *ngIf="mode === 'admin-edit' || mode === 'admin-create'" class="back-link" routerLink="/admin/users">
