--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -1,129 +1,116 @@
-<section>
+<!-- Alert Notifications -->
+<system-alert></system-alert>
 
-	<!-- Alert Notifications -->
-	<system-alert></system-alert>
+<!-- Show a breadcrumb to the list teams page -->
+<div class="mb-3">
+	<a class="back-link mb-1" routerLink="/teams">
+		<span class="fa fa-angle-double-left"></span> Back to Teams
+	</a>
+</div>
 
-	<!-- Show a breadcrumb to the list teams page -->
-	<div class="mb-3">
-		<a class="back-link mb-1" routerLink="/teams">
-			<span class="fa fa-angle-double-left"></span> Back to Teams
-		</a>
-	</div>
+<ng-container *ngIf="team; else noTeam">
+<div class="d-flex mb-3">
+	<h1>{{ team.name }} (Date Created: {{ team.created | utcDate:'MM/DD/YYYY' }})</h1>
+	<button type="button" class="btn btn-link ml-auto" (click)="remove()" *ngIf="canManageTeam">
+		Delete Team
+	</button>
+</div>
 
-	<ng-container *ngIf="team; else noTeam">
-		<div class="d-flex mb-3">
-			<h1>{{ team.name }} (Date Created: {{ team.created | utcDate:'MM/DD/YYYY' }})</h1>
-			<button type="button" class="btn btn-link ml-auto" (click)="remove()" *ngIf="canManageTeam">
-				Delete Team
-			</button>
-		</div>
-
-		<div class="cards row">
-			<div class="col-xl-7 mb-3">
-				<div class="card">
-					<div class="card-header d-flex align-items-center">
-						<h2>Members</h2>
-					</div>
-					<div class="card-body pb-1">
-						<list-team-members [team]="team"></list-team-members>
-					</div>
-				</div>
+<div class="cards row">
+	<div class="col col-na-xl-7 col-12">
+		<div class="card">
+			<div class="card-header d-flex align-items-center">
+				<h2>Members</h2>
 			</div>
-
-			<div class="col-xl-5">
-				<div class="card">
-					<div class="card-header d-flex align-items-center">
-						<h2>Settings
-							<button type="button" *ngIf="canManageTeam" [disabled]="isEditing" (click)="edit()" class="btn btn-outline-secondary ml-3">
-								<span class="fa fa-lg fa-pencil"></span>
-							</button>
-						</h2>
-
-					</div>
-					<div class="card-body overview-body" [ngClass]="{'editing': isEditing}">
-						<ng-container *ngIf="!isEditing; else fieldsForEditing" [ngTemplateOutlet]="fields"
-									  [ngTemplateOutletContext]="{team:team}">
-						</ng-container>
-					</div>
-				</div>
+			<div class="card-body">
+				<list-team-members [team]="team"></list-team-members>
 			</div>
 		</div>
-	</ng-container>
-</section>
-
-<ng-template #fields>
-	<h3>Basic Information</h3>
-	<table class="table table-striped table-inline-editable mb-0">
-		<tbody>
-		<tr>
-			<td>Name</td>
-			<td><span>{{ team.name }}</span></td>
-		</tr>
-		<tr>
-			<td>Description</td>
-			<td><span>{{ team.description }}</span></td>
-		</tr>
-		<tr *ngIf="team.implicitMembers && implicitMembersStrategy === 'roles' && team.requiresExternalRoles?.length > 0">
-			<td>External Roles</td>
-			<td><span>{{ team.requiresExternalRoles | join: ', ' }}</span></td>
-		</tr>
-		<tr *ngIf="team.implicitMembers && implicitMembersStrategy === 'teams' && team.requiresExternalTeams?.length > 0">
-			<td>External Teams</td>
-			<td><span>{{ team.requiresExternalTeams | join: ', ' }}</span></td>
-		</tr>
-		</tbody>
-	</table>
-</ng-template>
-
-<ng-template #fieldsForEditing>
-	<form id="edit-team-form" #editTeamForm="ngForm">
-		<div class="inline-edit-header-btns" style="margin: -4.5rem 0 2.125rem">
-			<button type="button" (click)="cancelEdit()" class="btn btn-outline-secondary ml-auto">Cancel</button>
-			<button [disabled]="!editTeamForm.form.valid" type="button" (click)="saveEdit()"
-					class="btn btn-primary ml-2">Save</button>
-		</div>
-
-		<h3>Basic Information</h3>
-		<table class="table table-striped table-inline-edit">
-			<tbody>
-			<tr>
-				<td>Name</td>
-				<td>
-					<input class="form-control" placeholder="Enter name" name="name"
-						   [(ngModel)]="_team.name" />
-				</td>
-			</tr>
-			<tr>
-				<td>Description</td>
-				<td>
-					<textarea class="form-control" placeholder="Enter description" name="description"
-							  [(ngModel)]="_team.description">
-					</textarea>
-				</td>
-			</tr>
-			<tr *ngIf="team.implicitMembers && implicitMembersStrategy === 'roles'">
-				<td>External Roles</td>
-				<td>
-					<asy-multi-select-input placeholder="Start typing a role..." name="externalRoles"
-											[(ngModel)]="_team.requiresExternalRoles"></asy-multi-select-input>
-				</td>
-			</tr>
-			<tr *ngIf="team.implicitMembers && implicitMembersStrategy === 'teams'">
-				<td>External Teams</td>
-				<td>
-					<asy-multi-select-input placeholder="Start typing a team..." name="externalTeams"
-											[(ngModel)]="_team.requiresExternalTeams"></asy-multi-select-input>
-				</td>
-			</tr>
-			</tbody>
-		</table>
-	</form>
-	<div class="inline-edit-btns text-right">
-		<button type="button" (click)="cancelEdit()" class="btn btn-outline-secondary">Cancel</button>
-		<button [disabled]="!editTeamForm.form.valid" type="button" (click)="saveEdit()"
-				class="btn btn-primary ml-2">Save</button>
 	</div>
-</ng-template>
+
+	<div class="col col-na-xl-5 col-12">
+		<div class="card">
+			<div class="card-header d-flex align-items-center">
+				<h2>Settings</h2>
+				<button class="btn btn-outline-secondary ml-3" type="button" [disabled]="isEditing"
+						*ngIf="canManageTeam" (click)="edit()">
+					<span class="fa fa-lg fa-pencil"></span>
+				</button>
+				<div class="inline-edit-header-btns ml-auto" *ngIf="isEditing">
+					<button class="btn btn-outline-secondary" type="button" (click)="cancelEdit()">Cancel</button>
+					<button class="btn btn-primary ml-2" type="button" [disabled]="!editTeamForm.form.valid"
+							(click)="saveEdit()">Save</button>
+				</div>
+			</div>
+			<div class="card-body" [class.editing]="isEditing">
+				<form id="edit-team-form" #editTeamForm="ngForm">
+					<h3>Basic Information</h3>
+					<div class="form-inline-edit mb-3">
+						<div class="form-group">
+							<label class="col col-form-label">Name</label>
+							<div class="col col-form-readonly-value" *ngIf="!isEditing">
+								<div>{{ team.name | titlecase }}</div>
+							</div>
+							<div class="col" *ngIf="isEditing">
+								<input class="form-control" placeholder="Enter name" name="name"
+									   [(ngModel)]="_team.name" required/>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col col-form-label">Description</label>
+							<div class="col col-form-readonly-value" *ngIf="!isEditing">
+								<div>{{ team.description | titlecase }}</div>
+							</div>
+							<div class="col" *ngIf="isEditing">
+								<textarea class="form-control" placeholder="Enter description" name="description"
+										  [(ngModel)]="_team.description">
+								</textarea>
+							</div>
+						</div>
+
+						<div class="form-group"
+							 *ngIf="team.implicitMembers && implicitMembersStrategy === 'roles'
+								&& (team.requiresExternalRoles?.length > 0 || isEditing)">
+							<label class="col col-form-label">External Roles</label>
+							<div class="col col-form-readonly-value" *ngIf="!isEditing">
+								<div>{{ team.requiresExternalRoles | join: ', ' }}</div>
+							</div>
+							<div class="col" *ngIf="isEditing">
+								<asy-multi-select-input
+									placeholder="Start typing a role..."
+									name="externalRoles"
+									[(ngModel)]="_team.requiresExternalRoles"></asy-multi-select-input>
+							</div>
+						</div>
+
+						<div class="form-group"
+							 *ngIf="team.implicitMembers && implicitMembersStrategy === 'teams'
+								&& (team.requiresExternalTeams?.length > 0 || isEditing)">
+							<label class="col col-form-label">External Teams</label>
+							<div class="col col-form-readonly-value" *ngIf="!isEditing">
+								<div>{{ team.requiresExternalTeams | join: ', ' }}</div>
+							</div>
+							<div class="col" *ngIf="isEditing">
+								<asy-multi-select-input
+									placeholder="Start typing a team..."
+									name="externalTeams"
+									[(ngModel)]="_team.requiresExternalTeams"></asy-multi-select-input>
+							</div>
+						</div>
+					</div>
+				</form>
+
+				<div class="inline-edit-btns text-right" *ngIf="isEditing">
+					<button class="btn btn-outline-secondary"type="button" (click)="cancelEdit()">Cancel</button>
+					<button class="btn btn-primary ml-2" type="button" [disabled]="!editTeamForm.form.valid"
+							(click)="saveEdit()">Save</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</ng-container>
 
 <ng-template #noTeam>
 	Error: Team not found
