--- a/src/styles/ngx-bootstrap/_cards.scss
+++ b/src/styles/ngx-bootstrap/_cards.scss
@@ -3,6 +3,10 @@
 $card-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3) !default;
 $card-selected-check-size: 2rem !default;
 
+.cards.row > .col:not(:last-child) {
+	margin-bottom: $spacer * 2;
+}
+
 .card {
 	box-shadow: $card-box-shadow;
 
