add examples to form component fix for btn-lg

--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -1,4 +1,4 @@
-<form style="max-width: 800px;">
+<form style="max-width: 900px;">
 
 	<h1 class="pb-3">Bootstrap Form Examples</h1>
 
@@ -185,6 +185,11 @@
 
 	<h2 class="pt-4">Submit Button w/ progress indicator</h2>
 	<button type="button" class="mr-3 btn btn-primary btn-submit" (click)="submit($event)">Submit</button>
+
+	<h3 class="pt-3">Square Buttons <small>(for use with fa-fw icons)</small></h3>
+	<button type="button" class="mr-3 btn btn-primary btn-square btn-sm"><span class="fa fa-fw fa-upload"></span></button>
+	<button type="button" class="mr-3 btn btn-primary btn-square"><span class="fa fa-fw fa-upload"></span></button>
+	<button type="button" class="mr-3 btn btn-primary btn-square btn-lg"><span class="fa fa-fw fa-upload"></span></button>
 
 	<h2 class="pt-4">File Input</h2>
 
