--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
@@ -170,7 +170,8 @@
 				<button type="button" class="btn btn-link mr-2" (click)="closeForm()">
 					Cancel
 				</button>
-				<button
+        <button
+          id="submit"
 					type="button"
 					class="btn btn-primary"
 					[disabled]="!form.valid"
