--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
@@ -1,14 +1,21 @@
 <app-flyout label="Feedback">
 	<div #flyoutContent class="feedback-form feedback-{{ status }}">
-		<form #form="ngForm" [ngClass]="{'d-none': status !== 'ready'}">
+		<form #form="ngForm" [ngClass]="{ 'd-none': status !== 'ready' }">
 			<h2 class="pb-2">What's on your mind?</h2>
 
 			<div class="form-check pl-0">
-				<input class="form-check-input" type="radio" name="type-option-radio" id="fo-type-option-1"
-					   value="General Feedback"
-					   [(ngModel)]="feedback.type"
-					   required>
-				<label for="fo-type-option-1" class="form-check-label mb-2">Ask a question or make a comment</label>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="type-option-radio"
+					id="fo-type-option-1"
+					value="General Feedback"
+					[(ngModel)]="feedback.type"
+					required
+				/>
+				<label for="fo-type-option-1" class="form-check-label mb-2"
+					>Ask a question or make a comment</label
+				>
 			</div>
 
 			<ng-container *ngIf="feedback.type === 'General Feedback'">
@@ -16,11 +23,18 @@
 			</ng-container>
 
 			<div class="form-check pl-0">
-				<input type="form-check-input" type="radio" name="type-option-radio" id="fo-type-option-2"
-					   value="Feature Request"
-					   [(ngModel)]="feedback.type"
-					   required>
-				<label for="fo-type-option-2" class="form-check-label mb-2">Suggest a new feature</label>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="type-option-radio"
+					id="fo-type-option-2"
+					value="Feature Request"
+					[(ngModel)]="feedback.type"
+					required
+				/>
+				<label for="fo-type-option-2" class="form-check-label mb-2"
+					>Suggest a new feature</label
+				>
 			</div>
 
 			<ng-container *ngIf="feedback.type === 'Feature Request'">
@@ -28,70 +42,114 @@
 			</ng-container>
 
 			<div class="form-check pl-0">
-				<input type="form-check-input" type="radio" name="type-option-radio" id="fo-type-option-3"
-					   value="Bug Report"
-					   [(ngModel)]="feedback.type"
-					   required>
-				<label for="fo-type-option-3" class="form-check-label mb-2">Report a bug/error</label>
+				<input
+					class="form-check-input"
+					type="radio"
+					name="type-option-radio"
+					id="fo-type-option-3"
+					value="Bug Report"
+					[(ngModel)]="feedback.type"
+					required
+				/>
+				<label for="fo-type-option-3" class="form-check-label mb-2"
+					>Report a bug/error</label
+				>
 			</div>
 
 			<ng-container *ngIf="feedback.type === 'Bug Report'">
 				<h3 class="pt-3 pb-2">What's the bug/error type?</h3>
 
 				<div class="form-check pl-0">
-					<input class="form-check-input" type="radio" name="subtype-option-radio" id="fo-subtype-option-1"
-						   value="Content or data"
-						   [(ngModel)]="feedback.subType"
-						   required>
-					<label for="fo-subtype-option-1" class="form-check-label mb-2">Content or data</label>
+					<input
+						class="form-check-input"
+						type="radio"
+						name="subtype-option-radio"
+						id="fo-subtype-option-1"
+						value="Content or data"
+						[(ngModel)]="feedback.subType"
+						required
+					/>
+					<label for="fo-subtype-option-1" class="form-check-label mb-2"
+						>Content or data</label
+					>
 				</div>
 
 				<div class="form-check pl-0">
-					<input class="form-check-input" type="radio" name="subtype-option-radio" id="fo-subtype-option-2"
-						   value="Styling"
-						   [(ngModel)]="feedback.subType"
-						   required>
+					<input
+						class="form-check-input"
+						type="radio"
+						name="subtype-option-radio"
+						id="fo-subtype-option-2"
+						value="Styling"
+						[(ngModel)]="feedback.subType"
+						required
+					/>
 					<label for="fo-subtype-option-2" class="form-check-label mb-2">Styling</label>
 				</div>
 
 				<div class="form-check pl-0">
-					<input class="form-check-input" type="radio" name="subtype-option-radio" id="fo-subtype-option-3"
-						   value="Technical"
-						   [(ngModel)]="feedback.subType"
-						   required>
+					<input
+						class="form-check-input"
+						type="radio"
+						name="subtype-option-radio"
+						id="fo-subtype-option-3"
+						value="Technical"
+						[(ngModel)]="feedback.subType"
+						required
+					/>
 					<label for="fo-subtype-option-3" class="form-check-label mb-2">Technical</label>
 				</div>
 
 				<div class="form-check pl-0">
-					<input class="form-check-input" type="radio" name="subtype-option-radio" id="fo-subtype-option-4"
-						   value="Other"
-						   [(ngModel)]="feedback.subType"
-						   required>
+					<input
+						class="form-check-input"
+						type="radio"
+						name="subtype-option-radio"
+						id="fo-subtype-option-4"
+						value="Other"
+						[(ngModel)]="feedback.subType"
+						required
+					/>
 					<label for="fo-subtype-option-4" class="form-check-label mb-2">Other</label>
 				</div>
 				<div class="mb-2" *ngIf="feedback.subType === 'Other'">
-					<input class="form-control" name="other-description"
-						   [(ngModel)]="feedback.otherText" required/>
+					<input
+						class="form-control"
+						name="other-description"
+						[(ngModel)]="feedback.otherText"
+						required
+					/>
 				</div>
 
 				<div class="form-check pl-0">
-					<input class="form-check-input" type="radio" name="subtype-option-radio" id="fo-subtype-option-5"
-						   value="Unsure"
-						   [(ngModel)]="feedback.subType"
-						   required>
+					<input
+						class="form-check-input"
+						type="radio"
+						name="subtype-option-radio"
+						id="fo-subtype-option-5"
+						value="Unsure"
+						[(ngModel)]="feedback.subType"
+						required
+					/>
 					<label for="fo-subtype-option-5" class="form-check-label mb-2">Unsure</label>
 				</div>
 
 				<h3 class="pt-2">What happened?</h3>
 				<ng-container *ngTemplateOutlet="textInput"></ng-container>
-
 			</ng-container>
 
 			<ng-template #textInput>
 				<div *ngIf="classificationOptions" class="form-group pt-2">
-					<ng-select [items]="classificationOptions" [clearable]="false" bindLabel="level"
-							   [(ngModel)]="feedback.classification" name="classification" required
-							   placeholder="Select Classification" dropdownPosition="bottom">
+					<ng-select
+						[items]="classificationOptions"
+						[clearable]="false"
+						bindLabel="level"
+						[(ngModel)]="feedback.classification"
+						name="classification"
+						required
+						placeholder="Select Classification"
+						dropdownPosition="bottom"
+					>
 					</ng-select>
 				</div>
 
@@ -102,14 +160,25 @@
 						style="height: 8rem;"
 						[(ngModel)]="feedback.text"
 						required
-						placeholder="Enter Feedback">
+						placeholder="Enter Feedback"
+					>
 					</textarea>
 				</div>
 			</ng-template>
 
 			<div class="d-flex justify-content-center mt-4">
-				<button type="button" class="btn btn-link mr-2" (click)="closeForm()">Cancel</button>
-				<button type="button" class="btn btn-primary" [disabled]="!form.valid" (click)="submit()">Send Feedback</button>
+				<button type="button" class="btn btn-link mr-2" (click)="closeForm()">
+					Cancel
+				</button>
+        <button
+          id="submit"
+					type="button"
+					class="btn btn-primary"
+					[disabled]="!form.valid"
+					(click)="submit()"
+				>
+					Send Feedback
+				</button>
 			</div>
 		</form>
 
@@ -138,10 +207,17 @@
 			</div>
 
 			<div class="d-flex justify-content-center mt-4">
-				<button type="button" class="btn btn-outline-secondary mr-2" (click)="status = 'ready'">Back to Feedback Form</button>
-				<button type="button" class="btn btn-primary" (click)="submit()">Resend Feedback</button>
+				<button
+					type="button"
+					class="btn btn-outline-secondary mr-2"
+					(click)="status = 'ready'"
+				>
+					Back to Feedback Form
+				</button>
+				<button type="button" class="btn btn-primary" (click)="submit()">
+					Resend Feedback
+				</button>
 			</div>
-
 		</div>
 	</div>
 </app-flyout>
