refactor: Remove outdated bootstrap class
'form-horizontal' class is no longer part of bootstrap and is no longer necessary.

--- a/src/app/core/eua/user-eua.component.html
+++ b/src/app/core/eua/user-eua.component.html
@@ -9,7 +9,7 @@
 			<!-- Alert Notifications -->
 			<system-alert *ngIf="showAlerts"></system-alert>
 
-			<form name="userForm" autocomplete="off" class="form-horizontal" role="form">
+			<form name="userForm" autocomplete="off" role="form">
 				<div class="card word-wrap">
 					<h6 class="card-header">{{ eua.title }}</h6>
 
