--- a/src/app/core/signin/signin.component.html
+++ b/src/app/core/signin/signin.component.html
@@ -18,7 +18,7 @@
 
 			<h2 class="text-center">Sign In</h2>
 
-			<div class="signin-form form-horizontal" autocomplete="off">
+			<div class="signin-form" autocomplete="off">
 				<fieldset>
 					<div class="form-group">
 						<label for="username">Username</label>
