--- a/src/app/core/admin/feedback/admin-list-feedback.component.html
+++ b/src/app/core/admin/feedback/admin-list-feedback.component.html
@@ -22,7 +22,7 @@
 			</ng-template>
 
 			<ng-template #tableHeader>
-				<th *ngFor="let header of headers">
+				<th scope="col" *ngFor="let header of headers">
 					<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 				</th>
 			</ng-template>
