--- a/src/app/core/signin/signin.component.html
+++ b/src/app/core/signin/signin.component.html
@@ -20,6 +20,7 @@
 
 			<div class="signin-form" autocomplete="off">
 				<fieldset>
+					<legend></legend>
 					<div class="form-group">
 						<label for="username">Username</label>
 						<input autofocus type="text" id="username" name="username" class="form-control" [(ngModel)]="username" (keyup.enter)="signin()" placeholder="Username">
