--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -7,10 +7,10 @@
 		<!-- Logo -->
 		<li class="element element-logo">
 			<a href="/#/" [hidden]="navbarOpen">
-				<img class="logo" src="/assets/images/nav-logo-icon.png"/>
+				<img class="logo" src="/assets/images/nav-logo-icon.png" alt="Logo"/>
 			</a>
 			<a href="/#/" [hidden]="!navbarOpen">
-				<img class="logo" src="/assets/images/nav-logo.png"/>
+				<img class="logo" src="/assets/images/nav-logo.png" alt="Logo"/>
 			</a>
 		</li>
 
