--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -30,12 +30,12 @@
 	<ng-container *ngIf="addedMembers.length > 0">
 		<h3 class="pt-2">Set user roles</h3>
 
-		<table class="table table-condensed">
+		<table class="table table-condensed" aria-describedby="Set user roles">
 			<thead>
 				<tr>
-					<th>Username</th>
-					<th>Role</th>
-					<th>&nbsp;</th>
+					<th scope="col">Username</th>
+					<th scope="col">Role</th>
+					<th scope="col">&nbsp;</th>
 				</tr>
 			</thead>
 
