--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -9,7 +9,7 @@
 
 	<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" [tableStriped]="true" (pageChange)="pageEvent$.next($event)">
 		<ng-template #tableHeader>
-			<th *ngFor="let header of headersToShow">
+			<th scope="col" *ngFor="let header of headersToShow">
 				<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 			</th>
 		</ng-template>
