--- a/src/app/common/system-alert/system-alert.component.html
+++ b/src/app/common/system-alert/system-alert.component.html
@@ -1,10 +1,10 @@
 <alert *ngFor="let alert of alertService.alerts$ | async; let i = index" [type]="alert.type" (close)="alertService.clear(i)" [dismissible]="true" >
-	<table>
+	<table aria-describedby="System alerts">
 		<tbody>
 		<tr>
-			<td class="align-middle">
+			<th scope="row" class="align-middle">
 				<system-alert-icon [icon]="alert.type"></system-alert-icon>
-			</td>
+			</th>
 			<td class="align-middle">
 				<div class="system-alert-message">{{ alert.msg }}</div>
 				<div class="system-alert-subtext" *ngIf="alert.subtext">{{ alert.subtext }}</div>
