--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -40,10 +40,10 @@
 				</ng-template>
 
 				<ng-template #tableHeader>
-					<th *ngFor="let header of headersToShow">
+					<th scope="col" *ngFor="let header of headersToShow">
 						<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 					</th>
-					<th>&nbsp;</th>
+					<th scope="col">&nbsp;</th>
 				</ng-template>
 
 				<ng-template #tableRow let-user="item" let-i="index">
