--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -18,7 +18,7 @@
 
 		<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" [tableStriped]="true" [loading]="loading" (pageChange)="pageEvent$.next($event)">
 			<ng-template #tableHeader>
-				<th *ngFor="let header of headers">
+				<th scope="col" *ngFor="let header of headers">
 					<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
 				</th>
 			</ng-template>
