need to use href vs. routerLink for external (to angular) urls

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -214,7 +214,7 @@
 
 						<!-- API Docs -->
 						<li *ngIf="showApiDocsLink">
-							<a [routerLink]="apiDocsLink" target="_blank"
+							<a [href]="apiDocsLink" target="_blank"
 							   (click)="helpNavPopover.hide()">API Docs</a>
 						</li>
 
