#147 Including API Docs in the Help menu (#150)
* #147 Including API Docs in the Help menu if provided from the config service

* need to use href vs. routerLink for external (to angular) urls

Co-authored-by: John Rassa <jrassa@asymmetrik.com>

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -212,6 +212,12 @@
 								(click)="showFeedbackModal();helpNavPopover.hide()">Give Feedback</a></li>
 						</ng-container>
 
+						<!-- API Docs -->
+						<li *ngIf="showApiDocsLink">
+							<a [href]="apiDocsLink" target="_blank"
+							   (click)="helpNavPopover.hide()">API Docs</a>
+						</li>
+
 						<!-- About -->
 						<li>
 							<a routerLink="/about"
