#151 Removing titlecase from recent and all messages listing. Adding spec coverage for both components

--- a/src/app/core/messages/recent-messages/recent-messages.component.html
+++ b/src/app/core/messages/recent-messages/recent-messages.component.html
@@ -14,7 +14,7 @@
 			<div class="col-alert-body">
 				<div class="card-body">
 					<div class="d-flex">
-						<h4 class="card-title text-truncate mr-3">{{ message.title | titlecase }}</h4>
+						<h4 class="card-title text-truncate mr-3">{{ message.title }}</h4>
 						<span class="fa fa-lg fa-close ml-auto" style="cursor: pointer"
 							  (click)="dismissMessage(message)"></span>
 					</div>
