--- a/src/app/core/messages/view-all-messages/view-all-messages.component.html
+++ b/src/app/core/messages/view-all-messages/view-all-messages.component.html
@@ -31,7 +31,7 @@
 						<div class="col-alert-body">
 							<div class="card-body">
 								<div class="d-flex">
-									<h3 class="card-title">{{ message.title | titlecase }}</h3>
+									<h3 class="card-title">{{ message.title }}</h3>
 									<span class="ml-auto">{{ message.created | agoDate }}</span>
 								</div>
 								<p class="mb-0" [innerHTML]="message.body"></p>
