--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -28,11 +28,12 @@
 					<asy-search-input placeholder="Search..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
 					<div class="btn-group dropdown ml-auto" dropdown>
 						<button type="button" class="btn btn-outline-secondary" (click)="exportCurrentView()"><span class="fa fa-download"></span> Export </button>
-						<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" dropdownToggle></button>
+						<!-- TODO Restore this when we've implemented "Export Single Field" -->
+						<!-- <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" dropdownToggle></button>
 						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu">
 							<li><a class="dropdown-item" (click)="exportCurrentView()" tabindex="0">Export Current View</a></li>
 							<li><a class="dropdown-item" (click)="exportUserData()" tabindex="0" disabled>Export Single Field</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
 						<span class="fa fa-user-plus"></span> Create User
