--- a/src/app/common/search-input/search-input.component.scss
+++ b/src/app/common/search-input/search-input.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/palettes';
+
 .search-input-container {
 	width: 350px;
 }
@@ -9,4 +11,13 @@
 	margin-left: -20px;
 	float: right;
 	z-index: 500;
+}
+
+.min-count {
+	color: map-get($palette-gray, 700);
+	font-size: 14px;
+
+	div {
+		padding-top: 5px;
+	}
 }
