:ok_hand: Prefer rem values over pixels, use bootstrap spacing classes instead of arbitrary padding values in css

--- a/src/app/common/search-input/search-input.component.html
+++ b/src/app/common/search-input/search-input.component.html
@@ -11,5 +11,5 @@
 	<span *ngIf="search.length > 0" (click)="clearSearch($event)" class="icon fa fa-times"></span>
 </div>
 <div *ngIf="showMinCountMessage" [@minCount] class="min-count">
-	<div>Searches require a minimum of {{ minSearchCharacterCount }} characters.</div>
+	<div class="pt-2">Searches require a minimum of {{ minSearchCharacterCount }} characters.</div>
 </div>
