--- a/src/app/common/search-input/search-input.component.scss
+++ b/src/app/common/search-input/search-input.component.scss
@@ -15,9 +15,5 @@
 
 .min-count {
 	color: map-get($palette-gray, 700);
-	font-size: 14px;
-
-	div {
-		padding-top: 5px;
-	}
+	font-size: 0.8rem;
 }
