:fire: Remove unused code

--- a/src/app/common/search-input/search-input.component.html
+++ b/src/app/common/search-input/search-input.component.html
@@ -1,4 +1,4 @@
-<div class="search-input-container d-flex" [style.width]="width">
+<div class="search-input-container d-flex">
 	<input
 		type="text"
 		[placeholder]="placeholder"
