Changed navbar tooltip labels

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -76,7 +76,7 @@
 				   [popover]="userNav"
 				   container="body"
 				   containerClass="site-nav-popover-container"
-				   tooltip="User"
+				   tooltip="User Profile"
 				   [isDisabled]="navbarOpen"
 				   #userNavPopover="bs-popover"
 				   placement="left"
@@ -112,7 +112,7 @@
 				   [popover]="auditorNav"
 				   container="body"
 				   containerClass="site-nav-popover-container"
-				   tooltip="Audits"
+				   tooltip="Audit Logs"
 				   [isDisabled]="navbarOpen"
 				   #auditorNavPopover="bs-popover"
 				   placement="left"
