--- a/src/app/common/search-input/search-input.component.html
+++ b/src/app/common/search-input/search-input.component.html
@@ -1,5 +1,15 @@
 <div class="search-input-container d-flex">
-	<input [placeholder]="placeholder" type="text" class="form-control" [(ngModel)]="search" (keyup)="onKeyup()">
+	<input
+		type="text"
+		[placeholder]="placeholder"
+		class="form-control"
+		[(ngModel)]="search"
+		(keyup)="onKeyup()"
+		(input)="onInput()"
+	/>
 	<span *ngIf="search.length === 0" class="icon fa fa-search"></span>
 	<span *ngIf="search.length > 0" (click)="clearSearch($event)" class="icon fa fa-times"></span>
+</div>
+<div *ngIf="!disableMinCountMessage && showMinCountMessage" [@minCount] class="text-muted pt-2">
+	<div class="pt-2">Searches require a minimum of {{ minSearchCharacterCount }} characters.</div>
 </div>
