:sparkles: BLOC-580 Added ability to preview from list
BLOC-580 Added ability to preview from list

--- a/src/app/core/admin/messages/list-messages.component.html
+++ b/src/app/core/admin/messages/list-messages.component.html
@@ -44,6 +44,9 @@
 						</span>
 						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
 							<li>
+								<a class="dropdown-item" (click)="previewMessage(message)">Preview</a>
+							</li>
+							<li>
 								<a class="dropdown-item" [routerLink]="['/admin/message', message._id]">Edit</a>
 							</li>
 							<li>
